Correcciones en PaginaDeInicio.tpl.html y se agregó un import en index.html

--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -15,7 +15,7 @@
         <link href="resources/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
 
         <!-- Optional theme  Boostrap-->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
 
         <!-- Angular -->
         <script src="resources/js/angular.min.js" type="text/javascript"></script>
@@ -64,85 +64,23 @@
         <!-- Importaciones especificas de cada modulo -->
         <!-- Visita Ciudad -->
         <!-- Moment.js -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
-	<!-- DateTimePicker -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css">
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
+        <!-- DateTimePicker -->
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css">
 
+        <!-- Importaciones necesarias para PaginaDeInicio.tpl.html -->
+        <!-- Bootstrap Core CSS -->
+        <link href="resources/css/bootstrap.min.css" rel="stylesheet">
+
+        <!-- Custom CSS -->
+        <link href="resources/css/stylish-portfolio.css" rel="stylesheet">
+
+        <!-- Custom Fonts -->
+        <link href="resources/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     </head>
     <body style="padding-top: 60px;">
-        <!-- <div class="container-fluid">
-            <!-- Navigation -->
-            <!-- <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
-            <nav id="sidebar-wrapper">
-                <ul class="sidebar-nav">
-                    <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
-                    <li class="sidebar-brand">
-                        <a href="#top"  onclick = $("#menu-close").click(); >Menu</a>
-                    </li>
-                    <li>
-                        <a href="#top" onclick = $("#menu-close").click(); >Home</a>
-                    </li>
-                    <li>
-                        <a href="#about" onclick = $("#menu-close").click(); >About</a>
-                    </li>
-                    <li>
-                        <a href="#services" onclick = $("#menu-close").click(); >Services</a>
-                    </li>
-                    <li>
-                        <a href="#portfolio" onclick = $("#menu-close").click(); >Portfolio</a>
-                    </li>
-                    <li>
-                        <a href="#contact" onclick = $("#menu-close").click(); >Contact</a>
-                    </li>
-                </ul>
-            </nav> -->
-            <!-- <div ui-view></div>
-            <div class="col-sm-6">
-                <div ui-view="principal"></div>
-            </div>
-            <div ui-view="centro"></div>
-        </div> -->
-
-
-        <!-- jQuery -->
-        <!-- <script src="resources/js/jquery.js" type="text/javascript"></script> -->
-
-        <!-- Bootstrap Core JavaScript -->   <!-- <script src="resources/js/bootstrap.min.js"></script>
-        <!-- <script src="resources/js/bootstrap.min.js" type="text/javascript"></script>
-
-        <!-- Custom Theme JavaScript -->
-        <!--<script>
-                                    // Closes the sidebar menu
-                                    $("#menu-close").click(function (e) {
-                                        e.preventDefault();
-                                        $("#sidebar-wrapper").toggleClass("active");
-                                    });
-
-                                    // Opens the sidebar menu
-                                    $("#menu-toggle").click(function (e) {
-                                        e.preventDefault();
-                                        $("#sidebar-wrapper").toggleClass("active");
-                                    });
-
-                                    // Scrolls to the selected menu item on the page
-                                    $(function () {
-                                        $('a[href*=#]:not([href=#])').click(function () {
-                                            if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
-
-                                                var target = $(this.hash);
-                                                target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-                                                if (target.length) {
-                                                    $('html,body').animate({
-                                                        scrollTop: target.offset().top
-                                                    }, 1000);
-                                                    return false;
-                                                }
-                                            }
-                                        });
-                                    });
-        </script> -->
-
         <div class="container-fluid">
             <div class="col-md-12">
                 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
