--- a/punajut-web/src/main/webapp/src/modules/usuario/PaginaDeInicio.tpl.html
+++ b/punajut-web/src/main/webapp/src/modules/usuario/PaginaDeInicio.tpl.html
@@ -3,10 +3,10 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>GoTravel</h1>
-            <h3>¿Que estas esperando? ¡Unete ya y crea experiencias inolvidables!</h3>
+            <h3>¿Qué estás esperando? ¡Únete ya y crea experiencias inolvidables!</h3>
             <br>
             <a ui-sref="usuario" class="btn btn-dark btn-lg">Ingresa</a>
-            <a ui-sref="usuario" class="btn btn-dark btn-lg">Registrate</a>
+            <a ui-sref="usuario" class="btn btn-dark btn-lg">Regístrate</a>
         </div>
     </header>
 
@@ -15,8 +15,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>¡GoTravel es la mejor herramienta para que planees tu viaje!</h2>
-                    <p class="lead">Podras crear tus itinerarios de viaje de forma didactica y facil.</p>
+                    <h2>¡GoTravel es la mejor herramienta para que planees tus viajes!</h2>
+                    <p class="lead">Crea tus itinerarios de viaje de forma didáctica y fácil.</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -30,55 +30,55 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Nuestros servicios</h2>
+                    <h2>¿Qué nos hace únicos?</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
-                            </span>
+                                    <em class="fa fa-circle fa-stack-2x"></em>
+                                    <em class="fa fa-cloud fa-stack-1x text-primary"></em>
+                                </span>
                                 <h4>
-                                    <strong>Crear Itinerario</strong>
+                                    <strong>Interfaz amigable</strong>
                                 </h4>
-                                <p>Podras planear tus viajes eligiendo los paises que vas a visitar y los eventos en los que participaras.</p>
+                                <p>Con unos pocos clicks, selecciona las ciudades que quieres visitar y los eventos de tu preferencia. Nosotros haremos el resto. ¡Crear itinerarios no puede ser más fácil!</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
-                            </span>
+                                    <em class="fa fa-circle fa-stack-2x"></em>
+                                    <em class="fa fa-compass fa-stack-1x text-primary"></em>
+                                </span>
                                 <h4>
-                                    <strong>Foro</strong>
+                                    <strong>Comunidad</strong>
                                 </h4>
-                                <p>Dentro de la aplicacion, podras participar en varios foros, ver puntos de vista de otras personas e integrarte con personas en todo el mundo.</p>
+                                <p>Comparte tus itinerarios con toda la comunidad GoTravel.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
-                            </span>
+                                    <em class="fa fa-circle fa-stack-2x"></em>
+                                    <em class="fa fa-flask fa-stack-1x text-primary"></em>
+                                </span>
                                 <h4>
-                                    <strong>Ver itinerarios</strong>
+                                    <strong>Guarda todos los recuerdos de tus viajes</strong>
                                 </h4>
-                                <p>Podras guardar tus itinerarios y verlos cuando quieras, de esta forma tus viajes o suenos no quedaran en el olvido.</p>
+                                <p>Guarda tus itinerarios y míralos cuando quieras. Ningúno de tus viajes quedará en el olvido.</p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
-                            </span>
+                                    <em class="fa fa-circle fa-stack-2x"></em>
+                                    <em class="fa fa-shield fa-stack-1x text-primary"></em>
+                                </span>
                                 <h4>
-                                    <strong>Vistas de creacion</strong>
+                                    <strong>Planeador de itinerarios</strong>
                                 </h4>
-                                <p>Cuando tengas tus itinerarios, podras ver los eventos en un mapa, en un time line, en un grafo, etc. De esta forma sera mas dinamica tu interaccion con tus creaciones.</p>
+                                <p>Mira los eventos de tus itinerarios organizados en un mapa, timeline o en un grafo.</p>
                             </div>
                         </div>
                     </div>
@@ -94,7 +94,7 @@
     <!-- Callout -->
     <aside class="callout">
         <div class="text-vertical-center">
-            <h1>¡Planea tus viajes ahora!</h1>
+            <h1>¡Planea tus viajes con nosotros ahora!</h1>
         </div>
     </aside>
 
@@ -103,34 +103,34 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>Nuestro Trabajo</h2>
+                    <h2>¿Quienes somos?</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="resources/img/portfolio-1.jpg">
+                                    <img class="img-portfolio img-responsive" src="resources/img/portfolio-1.jpg" alt="Una persona con un telefono inteligente">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="resources/img/portfolio-2.jpg">
+                                    <img class="img-portfolio img-responsive" src="resources/img/portfolio-2.jpg" alt="Una persona trabajando en un computador">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="resources/img/portfolio-3.jpg">
+                                    <img class="img-portfolio img-responsive" src="resources/img/portfolio-3.jpg" alt="Una persona utilizando un teclado">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="resources/img/portfolio-4.jpg">
+                                    <img class="img-portfolio img-responsive" src="resources/img/portfolio-4.jpg" alt="Una persona trabajando en diseños">
                                 </a>
                             </div>
                         </div>
@@ -159,14 +159,14 @@
 
     <!-- Map -->
     <section id="contact" class="map">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d15907.831170224283!2d-74.0740319966012!3d4.601582276558952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x8e3f99bcb666072b%3A0xa1257e7013f3eb50!2suniversidad+de+los+andes!3m2!1d4.6015857!2d-74.0652745!5e0!3m2!1ses!2sco!4v1461609343982"></iframe>
+        <iframe width="100%" height="100%" src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d15907.831170224283!2d-74.0740319966012!3d4.601582276558952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x8e3f99bcb666072b%3A0xa1257e7013f3eb50!2suniversidad+de+los+andes!3m2!1d4.6015857!2d-74.0652745!5e0!3m2!1ses!2sco!4v1461609343982"></iframe>
         <br />
         <small>
             <a href="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d15907.831170224283!2d-74.0740319966012!3d4.601582276558952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x8e3f99bcb666072b%3A0xa1257e7013f3eb50!2suniversidad+de+los+andes!3m2!1d4.6015857!2d-74.0652745!5e0!3m2!1ses!2sco!4v1461609343982"></a>
         </small>
         </iframe>
     </section>
-    
+
     <!-- Footer -->
     <footer>
         <div class="container">
@@ -176,18 +176,18 @@
                     </h4>
                     <p>Universidad de los Andes <br>Bogotá, Colombia</p>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (300) 659-5279</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:jp.gonzalez14@uniandes.edu.co">jp.gonzalez14@uniandes.edu.co</a>
+                        <li><em class="fa fa-phone fa-fw"></em> (300) 659-5279</li>
+                        <li><em class="fa fa-envelope-o fa-fw"></em>  <a href="mailto:jp.gonzalez14@uniandes.edu.co">jp.gonzalez14@uniandes.edu.co</a>
                         </li>
                     </ul>
                     <p>Juan Pablo González, Julio Poveda, Ricardo Ángel, María Arévalo, Rafael Cárdenas, Sofía Hernández</p>
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            <a href="#"><em class="fa fa-facebook fa-fw fa-3x"></em></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            <a href="#"><em class="fa fa-twitter fa-fw fa-3x"></em></a>
                         </li>
                     </ul>
                     <hr class="small">
@@ -197,4 +197,3 @@
         </div>
     </footer>
 </div>
-
