Correcciones en PaginaDeInicio.tpl.html y en stylish-portfolio.css

--- a/punajut-web/src/main/webapp/src/modules/usuario/PaginaDeInicio.tpl.html
+++ b/punajut-web/src/main/webapp/src/modules/usuario/PaginaDeInicio.tpl.html
@@ -103,34 +103,34 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>¿Quienes somos?</h2>
+                    <h2>Y tú, ¿A dónde quieres ir en tu próximo viaje?</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="resources/img/portfolio-1.jpg" alt="Una persona con un telefono inteligente">
+                                    <img class="img-portfolio img-responsive" src="resources/imagenes/imagenparis.jpg" alt="Paris">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="resources/img/portfolio-2.jpg" alt="Una persona trabajando en un computador">
+                                    <img class="img-portfolio img-responsive" src="resources/imagenes/imagenlondres.JPG" alt="Londres">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="resources/img/portfolio-3.jpg" alt="Una persona utilizando un teclado">
+                                    <img class="img-portfolio img-responsive" src="resources/imagenes/imagennuevayork.jpg" alt="Nueva York">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="resources/img/portfolio-4.jpg" alt="Una persona trabajando en diseños">
+                                    <img class="img-portfolio img-responsive" src="resources/imagenes/imagenriodejaneiro.JPG" alt="Rio de Janeiro">
                                 </a>
                             </div>
                         </div>
