Más correcciones de errores pequeños en varias clases

--- a/punajut-web/src/main/webapp/src/modules/usuario/usuario.tpl.html
+++ b/punajut-web/src/main/webapp/src/modules/usuario/usuario.tpl.html
@@ -48,22 +48,22 @@
                     <ul class="nav">
                         <li class="active">
                             <a ui-sref="CrearIt">
-                                <i class="glyphicon glyphicon-home"></i>
+                                <em class="glyphicon glyphicon-home"></em>
                                 Crear Itinerario </a>
                         </li>
                         <li>
                             <a ui-sref="itinerarios">
-                                <i class="glyphicon glyphicon-user"></i>
+                                <em class="glyphicon glyphicon-user"></em>
                                 Itinerario</a>
                         </li>
                         <li>
                             <a ui-sref="foroMain">
-                                <i class="glyphicon glyphicon-ok"></i>
+                                <em class="glyphicon glyphicon-ok"></em>
                                 Foro </a>
                         </li>
                         <li>
                             <a href="#">
-                                <i class="glyphicon glyphicon-flag"></i>
+                                <em class="glyphicon glyphicon-flag"></em>
                                 Help </a>
                         </li>
                     </ul>
