--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -101,9 +101,9 @@
                             <ul class="nav navbar-nav">
                                 <li><a ui-sref="PaginaDeInicio">Inicio</a></li>
                                 <li><a ui-sref="usuario">Perfil</a></li>
-                                <li><a ui-sref="ciudad">Prueba ciudad</a></li>
-                                <li><a ui-sref="visitaCiudad">Prueba visita ciudad</a></li>
-                                <li><a ui-sref="evento">Prueba evento</a></li>
+                                <li><a ui-sref="ciudad">Ciudad</a></li>
+                                <li><a ui-sref="visitaCiudad">Visita ciudad</a></li>
+                                <li><a ui-sref="evento">Evento</a></li>
                             </ul>
                         </div> <!-- /.navbar-collapse -->
                     </div> <!-- /.container-fluid -->
